Testing setting the bot up

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "chaosbot",
+  "name": "chaosgpt",
   "version": "1.0.0",
-  "description": "",
+  "description": "A bot that will take over the weeb realm",
+  "creator": "Jess Genert",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "discord.js": "^14.14.1"
   },
   "devDependencies": {
