--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "djs-commander": "^0.0.50",
+    "openai": "^4.26.1",
+    "replicate": "^0.25.2"
   },
   "devDependencies": {
     "eslint": "^8.56.0"
